# RssEpub

./: .gitignore  Cargo.toml  Dioxus.toml  package-lock.json
assets/: tailwind.css
src/: main.rs
src/components/: hero.rs  navbar.rs
src/data/: RssFetcher.rs  epubGenerator.rs  mod.rs  scrapper.rs
src/rssPub/: RssFetcher.rs  db_loader.rs  epubGenerator.rs  epub_data.rs  epub_generator.rs  loader.rs  mod.rs  rss_fetcher.rs  scrapper.rs
src/views/: home.rs  login.rs  mod.rs
