[package]
name = "rss-epub"
version = "0.1.0"
authors = ["Harshit Singh <harshit181@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["router", "fullstack"] }
tokio = { version = "1", features = ["full"], optional = true }
opml = {version="1.1.6"}
rss = "2.0.12"
reqwest= { version = "0.12.2",features = ["blocking","rustls-tls"] }
chrono ="0.4.3"
epub-builder = "0.8.0"
dom_smoothie = "0.7.0"
scraper = "0.23.1"
rusqlite = { version="0.34.0" }
serde ={version = "1.0.218"}


[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server", "dep:tokio"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
